--- a/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using EventsApp.CustomHelpers
-@using Microsoft.AspNet.Identity
+﻿@using Microsoft.AspNet.Identity
 @model EventsApp.Models.ViewModels.Event.EventDetailsVm
 @{ Layout = "~/Views/Shared/_Layout.cshtml"; }
 
@@ -8,24 +7,28 @@
     ViewBag.Title = "Details";
 }
 
-
-
-
 <div class="container body-content">
     <div class="col-sm-12 col-md-12 col-lg-12">
         <div class="title">
-            <h4 class="title">
+            <h4 class="text-center" style="color: orange; font-size: 2.5em" >
                 @Html.DisplayFor(model => model.Title)
             </h4>
             @if (User.IsInRole("Admin") || loggerdUserId == @Model.Owner.User.Id)
             {
-                using (Html.BeginForm())
-                {
-                    <input hidden="hidden" name="id" value="@Model.Id" />
-                    <div class="form-group">
-                        <input type="submit" value="Delete" class="btn btn-danger" onclick="return confirm('Are you sure you wish to delete this event?');" />
+                <div class="row col-lg-offset-10 col-md-offset-10 col-sm-offset-10">
+                    <div class="col-lg-2 col-md-2 col-sm-2">
+                        @using (Html.BeginForm())
+                        {
+                            <input hidden="hidden" name="id" value="@Model.Id" />
+                            <div class="form-group">
+                                <input type="submit" value="Delete" class="btn btn-danger" onclick="return confirm('Are you sure you wish to delete this event?');" />
+                            </div>
+                        }
                     </div>
-                }
+                    <div class="col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-lg-2 col-md-2 col-sm-2">
+                        @Html.ActionLink("Edit", "EditEvent", "Promoters", new { id = @Model.Id}, new { @class = "btn btn-warning" })
+                    </div>
+                </div>
             }
         </div>
         <div class="thumbnail">
@@ -35,9 +38,14 @@
                     <iframe src="http://www.youtube.com/embed/@Model.YouTubeUrl" scrolling="no" frameborder="0" style="position: relative; height: 100%; width: 100%;"></iframe>
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4">
-                    <img class="crop alignleft post-image" src="@Model.ImageUrl" alt="@Model.Id"/>
+                    <img class="crop alignleft post-image" src="@Model.ImageUrl" alt="@Model.Id" />
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4">
+                    <div>
+                        <h4>
+                            <span style="color: orange;"><strong>Category: </strong></span> @Model.Category
+                        </h4>
+                    </div>
                     <div>
                         <h4>
                             <span style="color: orange;"><strong>START AT: </strong></span> @Model.StartDateTime
@@ -66,7 +74,7 @@
                     </p>
                 </div>
                 <div style="height: 15px; border-bottom: 1px solid orange" class="col-sm-12 col-md-12 col-lg-12"></div>
-                <div >
+                <div>
                     <h4>
                         <span style="color: orange;"><strong>Details about promoter: </strong></span>                         @Html.ActionLink(@Html.DisplayFor(model => model.Owner.Name).ToString(), "Details", "Promoters", new { id = Model.Owner.Id }, null)
 
@@ -91,12 +99,12 @@
                     {
                         @Html.AntiForgeryToken()
 
-                        @Html.ValidationSummary(false, "", new {@class = "text-danger"})
+                        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                         <div class="form-group">
-                            <input name="EventId" type="hidden" value="@Model.Id" class="form-control"/>
+                            <input name="EventId" type="hidden" value="@Model.Id" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Join in" class="btn btn-info"/>
+                            <input type="submit" value="Join in" class="btn btn-info" />
                         </div>
                     }
                 }
@@ -113,8 +121,10 @@
                 </p>
             </div>
         </div>
-
+        <div>
+        </div>
     </div>
+
 
     @*<div>
             <h3>Comments</h3>
